Se actualizan los requerimientos y variables de entorno para el contenedor de telegrambot.

--- a/compose.yaml
+++ b/compose.yaml
@@ -109,6 +109,10 @@ services:
       - MARIADB_USER=${MARIADB_USER}
       - MARIADB_USER_PASS=${MARIADB_USER_PASS}
       - MARIADB_DB=${MARIADB_DB}
+      - SERVIDOR=${SERVIDOR}
+      - MQTT_USR=${MQTT_USR}
+      - MQTT_PASS=${MQTT_PASS}
+      - PUERTO_MQTTS=${PUERTO_MQTTS}
     restart: unless-stopped
     depends_on:
       - mariadb
